Add option to omit failed values from Data Validator log messages (#7570)
Signed-off-by: lance <leehaut@gmail.com>